--- a/example/web/index.html
+++ b/example/web/index.html
@@ -38,6 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="https://cdn.kkiapay.me/k.js"></script>
 </head>
 <body>
   <script>
